--- a/css/agency.css
+++ b/css/agency.css
@@ -3,3 +3,23 @@ h4{margin:0}#portfolio .portfolio-item .portfolio-caption{max-width:400px;margin
 .checked {
   color: orange;
 }
+.circular {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+}
+.circular img {
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
